--- a/coding_practice_JS/parallelCoordinate/parallelCoordinate.html
+++ b/coding_practice_JS/parallelCoordinate/parallelCoordinate.html
@@ -10,8 +10,7 @@
     <style>
         body,h1,h2,h3,h4,h5,h6,hr,p,blockquote,dl,dt,dd,ul,ol,li,pre,form,fieldset,legend,button,input,textarea,th,td{margin:0;padding:0}
         html{color:#000;overflow-y:scoll;overflow:-moz-scrollbars-vertical}
-        .div{position:absolute; border:1px dashed blue; width:0px; height:0px;left:0px; top:0px; overflow:hidden;}
-        .retc{position:absolute; border:1px solid #CCCCCC; overflow:hidden; background:#EFEFEF}
+        .div{position:absolute; border:1px dashed lightskyblue; width:0px; height:0px;left:0px; top:0px; overflow:hidden;}
     </style>
     <script src="food.js"></script>
     <script>
@@ -273,7 +272,7 @@
     };
     var $ = function(id){
         return document.getElementById(id);
-    }
+    };
     console.log(svg);
 </script>
 </body>
