--- a/coding_practice_JS/parallelCoordinate/save.html
+++ b/coding_practice_JS/parallelCoordinate/save.html
@@ -4,7 +4,7 @@
     <meta charset=utf-8" />
     <style>
         .box{position:absolute; padding:1px; width: 10px; height: 100px;background:#f0f3f9;}
-        .bar{cursor:move; font-size:1px;width: 30px; height: 25px;text-align: left}
+        .bar{cursor:move; font-size:1px;width: 30px; height: 20px;text-align: left}
         .content{width:30px; height:300px;cursor: crosshair;}
     </style>
     <style>
@@ -40,6 +40,10 @@
                 dragInit(children[i]);
             }
         }
+        window.onload = function(){
+            dragInit(document);
+            //document.onmouseup = docUp;
+        };
         function down(event)
         {
             event = event || window.event;
@@ -60,29 +64,6 @@
                 this.style.top = y + "px";
                 this.style.left = x + "px";
             }
-            var svg = document.getElementById('mainSvg');
-            for(var i = 0; i < foods.length; i++) {
-                for(var j = 0; j < 13/*14*/; j++) {
-                    var x1 = parseInt(document.getElementById(j.toString()+"box").style.left) + 10;
-                    var x2 = parseInt(document.getElementById((j+1).toString()+"box").style.left);
-
-                    var thisAttrVal = foods[i][document.getElementById(j.toString()+"bar").innerHTML];
-                    var yBase = parseInt(document.getElementById(j.toString()+"box").style.top) + 25;
-                    var yBottom = yBase + 300;
-                    var y1 = yBottom - thisAttrVal / elementMax[document.getElementById(j.toString()+"bar").innerHTML] * 300;
-
-                    thisAttrVal = foods[i][document.getElementById((j+1).toString()+"bar").innerHTML];
-                    yBase = parseInt(document.getElementById((j+1).toString()+"box").style.top) + 25;
-                    yBottom = yBase + 300;
-                    var y2 = yBottom - thisAttrVal / elementMax[document.getElementById((j+1).toString()+"bar").innerHTML] * 300;
-
-                    var line = document.getElementById(i+"line"+"_"+j+"box_"+(j+1)+"box");
-                    line.setAttribute("x1", x1.toString() + "px");
-                    line.setAttribute("y1", y1.toString() + "px");
-                    line.setAttribute("x2", x2.toString() + "px");
-                    line.setAttribute("y2", y2.toString() + "px");
-                }
-            }
         }
         function up(){
             this.dragging = false;
@@ -96,17 +77,9 @@
     </script>
 </head>
 <body>
-<svg id="mainSvg" width="1500px" height="1000px">
-    <div class="box" id="0box">
-        <div class="bar" id="0bar">protein (g)</div>
-        <div class="content" id="0content">
-            <svg width="10px" height="300px">
-                <rect width="10px" height="300px"></rect>
-            </svg>
-        </div>
-    </div>
+<svg id="mainSvg" width="1000px" height="1000px">
     <div class="box" id="1box">
-        <div class="bar" id="1bar">calcium (g)</div>
+        <div class="bar" id="1bar">protein</div>
         <div class="content" id="1content">
             <svg width="10px" height="300px">
                 <rect width="10px" height="300px"></rect>
@@ -114,7 +87,7 @@
         </div>
     </div>
     <div class="box" id="2box">
-        <div class="bar" id="2bar">sodium (g)</div>
+        <div class="bar" id="2bar">calcium</div>
         <div class="content" id="2content">
             <svg width="10px" height="300px">
                 <rect width="10px" height="300px"></rect>
@@ -122,7 +95,7 @@
         </div>
     </div>
     <div class="box" id="3box">
-        <div class="bar" id="3bar">fiber (g)</div>
+        <div class="bar" id="3bar">sodium</div>
         <div class="content" id="3content">
             <svg width="10px" height="300px">
                 <rect width="10px" height="300px"></rect>
@@ -130,7 +103,7 @@
         </div>
     </div>
     <div class="box" id="4box">
-        <div class="bar" id="4bar">vitaminc (g)</div>
+        <div class="bar" id="4bar">fiber</div>
         <div class="content" id="4content">
             <svg width="10px" height="300px">
                 <rect width="10px" height="300px"></rect>
@@ -138,7 +111,7 @@
         </div>
     </div>
     <div class="box" id="5box">
-        <div class="bar" id="5bar">potassium (g)</div>
+        <div class="bar" id="5bar">vitaminic</div>
         <div class="content" id="5content">
             <svg width="10px" height="300px">
                 <rect width="10px" height="300px"></rect>
@@ -146,7 +119,7 @@
         </div>
     </div>
     <div class="box" id="6box">
-        <div class="bar" id="6bar">carbohydrate (g)</div>
+        <div class="bar" id="6bar">potassium</div>
         <div class="content" id="6content">
             <svg width="10px" height="300px">
                 <rect width="10px" height="300px"></rect>
@@ -154,7 +127,7 @@
         </div>
     </div>
     <div class="box" id="7box">
-        <div class="bar" id="7bar">sugars (g)</div>
+        <div class="bar" id="7bar">carbohydrate</div>
         <div class="content" id="7content">
             <svg width="10px" height="300px">
                 <rect width="10px" height="300px"></rect>
@@ -162,7 +135,7 @@
         </div>
     </div>
     <div class="box" id="8box">
-        <div class="bar" id="8bar">fat (g)</div>
+        <div class="bar" id="8bar">sugars</div>
         <div class="content" id="8content">
             <svg width="10px" height="300px">
                 <rect width="10px" height="300px"></rect>
@@ -170,7 +143,7 @@
         </div>
     </div>
     <div class="box" id="9box">
-        <div class="bar" id="9bar">water (g)</div>
+        <div class="bar" id="9bar">fat</div>
         <div class="content" id="9content">
             <svg width="10px" height="300px">
                 <rect width="10px" height="300px"></rect>
@@ -178,7 +151,7 @@
         </div>
     </div>
     <div class="box" id="10box">
-        <div class="bar" id="10bar">calories</div>
+        <div class="bar" id="10bar">water</div>
         <div class="content" id="10content">
             <svg width="10px" height="300px">
                 <rect width="10px" height="300px"></rect>
@@ -186,7 +159,7 @@
         </div>
     </div>
     <div class="box" id="11box">
-        <div class="bar" id="11bar">saturated (g)</div>
+        <div class="bar" id="11bar">calories</div>
         <div class="content" id="11content">
             <svg width="10px" height="300px">
                 <rect width="10px" height="300px"></rect>
@@ -194,7 +167,7 @@
         </div>
     </div>
     <div class="box" id="12box">
-        <div class="bar" id="12bar">monounsat (g)</div>
+        <div class="bar" id="12bar">saturated</div>
         <div class="content" id="12content">
             <svg width="10px" height="300px">
                 <rect width="10px" height="300px"></rect>
@@ -202,8 +175,16 @@
         </div>
     </div>
     <div class="box" id="13box">
-        <div class="bar" id="13bar">polyunsat (g)</div>
+        <div class="bar" id="13bar">monounsat</div>
         <div class="content" id="13content">
+            <svg width="10px" height="300px">
+                <rect width="10px" height="300px"></rect>
+            </svg>
+        </div>
+    </div>
+    <div class="box" id="14box">
+        <div class="bar" id="14bar">polyunsat</div>
+        <div class="content" id="14content">
             <svg width="10px" height="300px">
                 <rect width="10px" height="300px"></rect>
             </svg>
@@ -211,98 +192,19 @@
     </div>
 </svg>
 <script>
-/*
- "protein (g)": 0.28,    //0-62
- "calcium (g)": 0.004,   //0-1.3
- "sodium (g)": 0.002,    //0-5
- "fiber (g)": null,      //0-28
- "vitaminc (g)": 0,      //0-0.28
- "potassium (g)": 0.005, //2
- "carbohydrate (g)": null,//100
- "sugars (g)": null,     //100
- "fat (g)": 99.48,       //100
- "water (g)": 0.24,      //100
- "calories": 876,        //902
- "saturated (g)": 61.924,   //96
- "monounsat (g)": 28.732,    //80
- "polyunsat (g)": 3.694      //70
- */
-//    var proteinMax = 62;
-//    var calciumMax = 1.3;
-//    var sodiumMax = 5;
-//    var fiberMax = 28;
-//    var vitamincMax = 0.28;
-//    var potassiumMax = 2;
-//    var carbohydrateMax = 100;
-//    var sugarsMax = 100;
-//    var fatMax = 100;
-//    var waterMax = 100;
-//    var caloriesMax = 902;
-//    var saturatedMax = 96;
-//    var monounsatMax = 80;
-//    var polyunsatMax = 70;
-    var elementMax = {
-        "protein (g)":62,
-        "calcium (g)": 1.3,
-        "sodium (g)" : 5,
-        "fiber (g)" : 28,
-        "vitaminc (g)" : 0.28,
-        "potassium (g)" : 2,
-        "carbohydrate (g)" : 100,
-        "sugars (g)" : 100,
-        "fat (g)" : 100,
-        "water (g)" : 100,
-        "calories" : 902,
-        "saturated (g)" : 96,
-        "monounsat (g)" : 80,
-        "polyunsat (g)" : 70
-    };
-    var groupNum = findGroupNum();
-    window.onload = function(){
-        dragInit(document);
-        //document.onmouseup = docUp;
-        var svg = document.getElementById('mainSvg');
-        for(var i = 0; i < foods.length; i++) {
-            for(var j = 0; j < 13/*14*/; j++) {
-                var x1 = parseInt(document.getElementById(j.toString()+"box").style.left) + 10;
-                var x2 = parseInt(document.getElementById((j+1).toString()+"box").style.left);
-
-                var thisAttrVal = foods[i][document.getElementById(j.toString()+"bar").innerHTML];
-                var yBase = parseInt(document.getElementById(j.toString()+"box").style.top) + 25;
-                var yBottom = yBase + 300;
-                var y1 = yBottom - thisAttrVal / elementMax[document.getElementById(j.toString()+"bar").innerHTML] * 300;
-
-                thisAttrVal = foods[i][document.getElementById((j+1).toString()+"bar").innerHTML];
-                yBase = parseInt(document.getElementById((j+1).toString()+"box").style.top) + 25;
-                yBottom = yBase + 300;
-                var y2 = yBottom - thisAttrVal / elementMax[document.getElementById((j+1).toString()+"bar").innerHTML] * 300;
-
-                var line = document.createElementNS("http://www.w3.org/2000/svg", "line");
-                line.setAttribute("x1", x1.toString() + "px");
-                line.setAttribute("y1", y1.toString() + "px");
-                line.setAttribute("x2", x2.toString() + "px");
-                line.setAttribute("y2", y2.toString() + "px");
-                line.setAttribute("stroke-width", "1px");
-                line.setAttribute("stroke-opacity", "0.1");
-                line.setAttribute("stroke", "hsl(" + (360 * (foods[i].groupNumber + 1) / groupNum) + ", 100%, 60%)");
-                //line.setAttribute("stroke", 'blue');
-                line.setAttribute("id", i+"line"+"_"+j+"box_"+(j+1)+"box");
-                svg.appendChild(line);
-            }
-        }
-    };
-    function findGroupNum(){
-        var groupName = foods[0].group;
-        var num = 1;
-        for(var i = 1; i < foods.length; i++){
-            if(foods[i].group != groupName){
-                num++;
-                groupName = foods[i].group;
-            }
-            foods[i].groupNumber = num;
-        }
-        return num;
-    }
+    var svg = document.getElementById('mainSvg');
+    console.log(svg);
+    var pos1 = document.getElementById("1bar");
+    var pos2 = document.getElementById("2bar");
+    console.log(parseInt(pos1.style.left));
+    var line = document.createElementNS("http://www.w3.org/2000/svg", "line");
+    line.setAttribute("x1", "20");
+    line.setAttribute("y1", "20");
+    line.setAttribute("x2", "80");
+    line.setAttribute("y2", "80");
+    line.setAttribute("stroke-width", "2px");
+    line.setAttribute("stroke", "skyblue");
+    svg.appendChild(line);
 </script>
 <script>
     var wId = "w";
@@ -368,6 +270,7 @@
     var $ = function(id){
         return document.getElementById(id);
     };
+    console.log(svg);
 </script>
 </body>
 </html>
